--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -5,6 +5,9 @@ html {
     padding: 0;
     font-size: $font-size;
     color: $font-color;
+    background-color: $background-color;
+    width: 100%;
+    height: 100%;
   }
   h1,h2,h3,h4,h5,h6,ul,li,p {
     margin: 0;
