--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -1,11 +1,10 @@
-@import "variables";
+@import "app-vars";
+@import "theme-light";
+@import "element-ui";
 html {
   body {
     margin: 0;
     padding: 0;
-    font-size: $font-size;
-    color: $font-color;
-    background-color: $background-color;
     width: 100%;
     height: 100%;
   }
@@ -15,5 +14,11 @@ html {
   }
   ul,ol {
     list-style: none;
+  }
+  #app {
+    font-size: var(--font-size);
+    color: var(--font-color);
+    background-color: var(--background-color);
+    font-family: var(--font-family);
   }
 }
