--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -7,6 +7,7 @@ html {
     padding: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
   h1,h2,h3,h4,h5,h6,ul,li,p {
     margin: 0;
@@ -16,6 +17,9 @@ html {
     list-style: none;
   }
   #app {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
     font-size: var(--font-size);
     color: var(--font-color);
     background-color: var(--background-color);
