--- a/node-page/src/assets/style/element-ui.scss
+++ b/node-page/src/assets/style/element-ui.scss
@@ -1,12 +1,17 @@
 #app {
   --el-color-primary: var(--primary-color);
-  --el-color-primary-light-3: var(--primary-color);
-  --el-color-primary-light-5: var(--primary-color);
-  --el-color-primary-light-7: var(--primary-color);
-  --el-color-primary-light-8: var(--primary-color);
-  --el-color-primary-light-9: var(--primary-color);
-  --el-color-primary-dark-2: var(--primary-color);
+  --el-color-primary-light-3: var(--primary-color-3);
+  --el-color-primary-light-5: var(--primary-color-5);
+  --el-color-primary-light-7: var(--primary-color-7);
+  --el-color-primary-light-8: var(--primary-color-8);
+  --el-color-primary-light-9: var(--primary-color-9);
   // 按钮
+  .el-button {
+    --el-button-hover-text-color: var(--font-color);
+    --el-button-hover-bg-color: #fff;
+    --el-button-hover-border-color: var(--input-border-color);
+    --el-button-active-border-color: var(--input-border-color);
+  }
   .el-button--primary {
     --el-button-text-color: var(--font-color);
     --el-button-hover-text-color: var(--font-color);
@@ -18,5 +23,14 @@
   // 下拉框
   .el-select {
     --el-select-input-focus-border-color: var(--input-border-color);
+  }
+  // 表单
+  .el-form {
+    .el-form-item {
+      flex-direction: column;
+      .el-form-item__label {
+        justify-content: flex-start;
+      }
+    }
   }
 }
