--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -1,6 +1,11 @@
 #app.theme-light {
   // 主色调
   --primary-color: #FFE957;
+  --primary-color-3: #fae464;
+  --primary-color-5: #fdec7d;
+  --primary-color-7: #faec91;
+  --primary-color-8: #faf1b6;
+  --primary-color-9: #f8f1c4;
   // 背景色
   --background-color: #f7f7f7;
   // 字体
