--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -24,5 +24,9 @@ html {
     color: var(--font-color);
     background-color: var(--background-color);
     font-family: var(--font-family);
+    a {
+      text-decoration: none;
+      color: var(--font-color)
+    }
   }
 }
