--- a/node-page/src/assets/style/app-vars.scss
+++ b/node-page/src/assets/style/app-vars.scss
@@ -13,4 +13,8 @@
   --font-size-middle: 16px;
   // 大号尺寸
   --font-size-large: 22px;
+  // 搜索输入框高度
+  --input-search-height: 50px;
+  // 默认边框
+  --border-default-color: #eee;
 }
