--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -1,6 +1,7 @@
 #app.theme-light {
   // 主色调
   --primary-color: #FFE957;
+  --primary-color-dark: #d3b300;
   --primary-color-3: #fae464;
   --primary-color-5: #fdec7d;
   --primary-color-7: #faec91;
