服务空间详情

--- a/node-page/src/assets/style/app-vars.scss
+++ b/node-page/src/assets/style/app-vars.scss
@@ -1,6 +1,10 @@
 #app {
   // 页面宽度
   --page-width: 780px;
+  // 页面阴影
+  --page-shadow: 0 0 10px -8px #999;
+  // 表单阴影
+  --form-shadow: 1px 1px 10px -5px #999;
   // 字体
   --font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
   --font-family-number: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
