--- a/node-page/src/assets/style/app-vars.scss
+++ b/node-page/src/assets/style/app-vars.scss
@@ -1,10 +1,11 @@
 #app {
   // 页面宽度
-  --page-width: 780px;
+  --page-width: 1000px;
   // 页面阴影
   --page-shadow: 0 0 10px -8px #999;
-  // 表单阴影
+  // 表单
   --form-shadow: 1px 1px 10px -5px #999;
+  --form-width: 780px;
   // 字体
   --font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
   --font-family-number: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
