--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -1,8 +1,10 @@
 #app.theme-light {
   // 主色调
   --primary-color: #FFE957;
-  --primary-color-match: #333;
-  --primary-color-match-2: #666;
+  --primary-color-match-1: #333;
+  --primary-color-match-1-transition: #666;
+  --primary-color-match-2: #ff404b;
+  --primary-color-match-3: #ff00ff;
   --primary-color-dark: #d3b300;
   --primary-color-3: #fae464;
   --primary-color-5: #fdec7d;
