--- a/node-page/src/assets/style/element-ui.scss
+++ b/node-page/src/assets/style/element-ui.scss
@@ -13,8 +13,11 @@
     --el-button-active-border-color: var(--input-border-color);
     --el-button-active-color: var(--primary-color-dark);
     --el-button-active-bg-color: #eee;
+    --el-button-bg-color: #fff;
+    --el-button-text-color: var(--el-text-color-regular);
   }
   .el-button--primary {
+    --el-button-bg-color: var(--primary-color);
     --el-button-text-color: var(--font-color);
     --el-button-hover-text-color: var(--font-color);
     --el-button-hover-bg-color: var(--primary-color);
