--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -31,5 +31,8 @@ html {
       text-decoration: none;
       color: var(--font-color)
     }
+    .color-info-1 {
+      color: var(--color-gray);
+    }
   }
 }
