--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -3,7 +3,7 @@
   --primary-color: #FFE957;
   --primary-color-match-1: #333;
   --primary-color-match-1-transition: #666;
-  --primary-color-match-2: #ff404b;
+  --primary-color-match-2: #FC777D;
   --primary-color-match-3: #ff00ff;
   --primary-color-dark: #d3b300;
   --primary-color-3: #fae464;
