初始化目录选择

--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -27,6 +27,7 @@ html {
     color: var(--font-color);
     background-color: var(--background-color);
     font-family: var(--font-family);
+    -webkit-font-smoothing: antialiased;
     a {
       text-decoration: none;
       color: var(--font-color)
