--- a/node-page/src/assets/style/element-ui.scss
+++ b/node-page/src/assets/style/element-ui.scss
@@ -1,4 +1,4 @@
-#app {
+:root {
   --el-color-primary: var(--primary-color);
   --el-color-primary-light-3: var(--primary-color-3);
   --el-color-primary-light-5: var(--primary-color-5);
