--- a/node-page/src/assets/style/element-ui.scss
+++ b/node-page/src/assets/style/element-ui.scss
@@ -6,24 +6,16 @@
   --el-color-primary-light-8: var(--primary-color-8);
   --el-color-primary-light-9: var(--primary-color-9);
   // 按钮
-  .el-button {
-    --el-button-hover-text-color: var(--font-color);
-    --el-button-hover-bg-color: var(--color-light);
-    --el-button-hover-border-color: var(--input-border-color);
-    --el-button-active-border-color: var(--input-border-color);
-    --el-button-active-color: var(--primary-color-dark);
-    --el-button-active-bg-color: #eee;
-    --el-button-bg-color: var(--color-light);
-    --el-button-text-color: var(--el-text-color-regular);
-  }
   .el-button--primary {
     --el-button-bg-color: var(--primary-color);
-    --el-button-text-color: var(--font-color);
-    --el-button-hover-text-color: var(--font-color);
-    --el-button-hover-bg-color: var(--primary-color);
+    --el-button-text-color: var(--primary-color-reverse);
+    --el-button-border-color: var(--primary-color);
+    --el-button-hover-text-color: var(--primary-color-reverse);
+    --el-button-hover-bg-color: var(--primary-color-3);
+    --el-button-hover-border-color: var(--primary-color-3);
     --el-button-active-border-color: var(--input-border-color);
-    --el-button-active-color: var(--primary-color-dark);
-    --el-button-active-bg-color: var(--primary-color-dark);
+    --el-button-active-color: var(--primary-color-5);
+    --el-button-active-bg-color: var(--primary-color-5);
   }
   // 重点按钮
   .el-button--important {
@@ -32,16 +24,6 @@
     color: var(--color-light);
     border: 0;
     text-shadow: 1px 1px 5px #999;
-  }
-  // 反转色按钮
-  .el-button--reverse {
-    --el-button-bg-color: var(--primary-color-match-1);
-    --el-button-text-color: var(--color-light);
-    --el-button-hover-text-color: var(--color-light);
-    --el-button-hover-bg-color: var(--primary-color-match-1-transition);
-    --el-button-active-border-color: var(--primary-color-match-1);
-    --el-button-active-color: var(--primary-color-match-1);
-    --el-button-active-bg-color: var(--primary-color-match-1);
   }
   // 输入框
   .el-input, .el-textarea {
@@ -62,6 +44,6 @@
   }
   // 分页
   .el-pagination {
-    --el-pagination-hover-color: var(--primary-color-dark);
+    --el-pagination-hover-color: var(--primary-color);
   }
 }
