服务空间详情调整

--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -36,6 +36,9 @@ html {
     .text-info-1 {
       color: var(--color-gray);
     }
+    .text-mini {
+      font-size: var(--font-size-mini);
+    }
     // 图标按钮
     .button-icon {
       padding-left: 10px;
