--- a/node-page/src/assets/style/element-ui.scss
+++ b/node-page/src/assets/style/element-ui.scss
@@ -31,6 +31,7 @@ body.theme-light {
     --el-button-active-border-color: var(--primary-color-match-1-transition);
     --el-button-active-color: var(--primary-color-match-1);
     --el-button-active-bg-color: var(--primary-color-match-1-transition);
+    font-weight: bold;
   }
   // 输入框
   .el-input, .el-textarea {
