重新渲染时重新计算关系线

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -1,6 +1,6 @@
 body.theme-light {
   // 主色调
-  --primary-color: #333;
+  --primary-color: #1e1f22;
   --primary-color-reverse: #fff;
   --primary-color-match-1: #FFE957;
   --primary-color-match-1-transition: #e5d14e;
