注册页面绘制

--- a/node-page/src/assets/style/app-vars.scss
+++ b/node-page/src/assets/style/app-vars.scss
@@ -2,7 +2,7 @@
   // 页面宽度
   --page-width: 1000px;
   // 页面阴影
-  --page-shadow: 0 0 10px -8px #999;
+  --page-shadow: 0 0 20px -5px #ccc;
   // 表单
   --form-shadow: 1px 1px 10px -5px #999;
   --form-width: 780px;
@@ -29,5 +29,5 @@
   --gap-page-bottom: 50px;
   --gap-page-padding: 30px;
   // 圆弧
-  --radius-page: 20px;
+  --radius-page: 10px;
 }
