--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -12,6 +12,7 @@ body.theme-light {
   --primary-color-7: #999;
   --primary-color-8: #bbb;
   --primary-color-9: #ddd;
+  --danger-color: #fc6a70;
   // 背景色
   --background-color: #fafafa;
   // 字体
