--- a/node-page/src/assets/style/app-vars.scss
+++ b/node-page/src/assets/style/app-vars.scss
@@ -23,6 +23,8 @@
   --input-search-height: 50px;
   // 默认边框
   --border-default-color: #eee;
+  --border-default-color-deep: #ccc;
+  --border-colors: linear-gradient(to right, var(--primary-color), var(--primary-color-match-2), var(--primary-color-match-1)) 1;
   // 间距
   --gap-title: 20px;
   // 页面底部预留间距
