--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -1,6 +1,7 @@
 body.theme-light {
   // 主色调
   --primary-color: #1e1f22;
+  --primary-color-common: #105fc9;
   --primary-color-reverse: #fff;
   --primary-color-match-1: #FFE957;
   --primary-color-match-1-transition: #e5d14e;
@@ -22,5 +23,6 @@ body.theme-light {
   --color-gray: #757575;
   --color-gray-1: #999;
   --color-light: #fff;
+  --color-success: #35c414;
   --color-danger: #fc6a70;
 }
