拷贝和执行sql

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -1,6 +1,7 @@
 body.theme-light {
   // 主色调
   --primary-color: #1e1f22;
+  --primary-color-light: #2e3034;
   --primary-color-common: #105fc9;
   --primary-color-reverse: #fff;
   --primary-color-match-1: #FFE957;
