增加已安装标识

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -24,7 +24,8 @@ body.theme-light {
   --color-gray: #757575;
   --color-gray-1: #999;
   --color-light: #fff;
-  --color-success: #35c414;
+  --color-success: #42b883;
+  --color-success-light: #dbffef;
   --color-danger: #fc6a70;
   --color-value: #333;
 }
