--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -8,6 +8,7 @@ body.theme-light {
   --primary-color-match-1-transition: #e5d14e;
   --primary-color-match-1-dark: #655c23;
   --primary-color-match-2: #FC777D;
+  --primary-color-match-2-light: #ffd2d4;
   --primary-color-match-3: #ff00ff;
   --primary-color-3: #555;
   --primary-color-5: #777;
@@ -23,6 +24,7 @@ body.theme-light {
   // 色彩
   --color-gray: #757575;
   --color-gray-1: #999;
+  --color-gray-2: #f0f0f0;
   --color-light: #fff;
   --color-success: #42b883;
   --color-success-light: #dbffef;
