列表页面样式优化

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -30,4 +30,6 @@ body.theme-light {
   --color-success-light: #dbffef;
   --color-danger: #fc6a70;
   --color-value: #333;
+  --color-service-name: #005980;
+  --color-service-name-hover: #1283ba;
 }
