优化创建插件/服务页

--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -71,4 +71,10 @@ html {
       margin-right: 5px;
     }
   }
+  // 跟随输入的输入框
+  .el-input.follow-input {
+    .el-input__wrapper {
+      background: #eee;
+    }
+  }
 }
