工作台展示label

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -23,6 +23,7 @@ body.theme-light {
   --input-border-color: #666;
   // 色彩
   --color-gray: #757575;
+  --color-gray-deep: #555;
   --color-gray-1: #999;
   --color-gray-2: #f0f0f0;
   --color-light: #fff;
