--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -26,6 +26,8 @@ body.theme-light {
   --color-gray-deep: #555;
   --color-gray-1: #999;
   --color-gray-2: #f0f0f0;
+  --color-gray-3: #f5f5f5;
+  --color-gray-4: #e0e0e0;
   --color-light: #fff;
   --color-success: #42b883;
   --color-success-light: #dbffef;
