用户服务加载中处理

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -17,6 +17,7 @@ body.theme-light {
   --primary-color-9: #ddd;
   // 背景色
   --background-color: #fafafa;
+  --background-color-tip: #005980;
   // 字体
   --font-color: #333;
   // 输入框边框色
