--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -7,6 +7,7 @@ body.theme-light {
   --primary-color-match-1: #FFE957;
   --primary-color-match-1-transition: #e5d14e;
   --primary-color-match-1-dark: #655c23;
+  --primary-color-match-1-light: #fffad6;
   --primary-color-match-2: #FC777D;
   --primary-color-match-2-light: #ffd2d4;
   --primary-color-match-3: #ff00ff;
