优化创建/编辑项目UI

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -30,6 +30,7 @@ body.theme-light {
   --color-gray-2: #f0f0f0;
   --color-gray-3: #f5f5f5;
   --color-gray-4: #e0e0e0;
+  --color-gray-selected: #efefef;
   --color-light: #fff;
   --color-success: #42b883;
   --color-success-light: #dbffef;
