支持git克隆服务代码

--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -77,4 +77,10 @@ html {
       background: #eee;
     }
   }
+  // 消息弹窗
+  .el-overlay-message-box {
+    .el-message-box__message p {
+      word-break: break-all;
+    }
+  }
 }
