--- a/node-page/src/assets/style/iconfont.scss
+++ b/node-page/src/assets/style/iconfont.scss
@@ -1,8 +1,10 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4252249 */
-  src: url('//at.alicdn.com/t/c/font_4252249_ofc8u294d3m.woff2?t=1694841963950') format('woff2'),
-  url('//at.alicdn.com/t/c/font_4252249_ofc8u294d3m.woff?t=1694841963950') format('woff'),
-  url('//at.alicdn.com/t/c/font_4252249_ofc8u294d3m.ttf?t=1694841963950') format('truetype');
+  /* Color fonts */
+  src:
+          url('//at.alicdn.com/t/c/font_4252249_ptf6mgv5tx.woff2?t=1695733881847') format('woff2'),
+          url('//at.alicdn.com/t/c/font_4252249_ptf6mgv5tx.woff?t=1695733881847') format('woff'),
+          url('//at.alicdn.com/t/c/font_4252249_ptf6mgv5tx.ttf?t=1695733881847') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +13,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-wenjian:before {
+  content: "\e691";
 }
 
 .icon-time:before {
