增加悬浮表提示

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -9,6 +9,7 @@ body.theme-light {
   --primary-color-match-1-dark: #655c23;
   --primary-color-match-1-light: #fffad6;
   --primary-color-match-2: #FC777D;
+  --primary-color-match-2-transition: #cb5053;
   --primary-color-match-2-light: #ffd2d4;
   --primary-color-match-3: #ff00ff;
   --primary-color-3: #555;
