优化模型字段选择

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -24,6 +24,7 @@ body.theme-light {
   --font-color: #333;
   // 输入框边框色
   --input-border-color: #666;
+  --input-border-hover-color: #c0c4cc;
   // 色彩
   --color-gray: #757575;
   --color-gray-deep: #555;
