--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -9,6 +9,7 @@ html {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background: var(--background-color);
   }
   h1,h2,h3,h4,h5,h6,ul,li,p {
     margin: 0;
@@ -97,5 +98,13 @@ html {
   // 排序
   .sortable-ghost {
     background-color: #dcdcdc !important;
+  }
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: black;
+    background-color: #fff !important;
   }
 }
