调整输入框尺寸

--- a/node-page/src/assets/style/app-vars.scss
+++ b/node-page/src/assets/style/app-vars.scss
@@ -22,7 +22,7 @@ body {
   // 搜索输入框高度
   --input-search-height: 50px;
   // 默认边框
-  --border-default-color: #eee;
+  --border-default-color: #dcdfe6;
   --border-default-color-deep: #ccc;
   --border-colors: linear-gradient(to right, var(--primary-color), var(--primary-color-match-2), var(--primary-color-match-1)) 1;
   // 间距
