--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -117,6 +117,29 @@ html {
       }
     }
   }
+  // popover提示
+  .global-popover {
+    border: 2px solid #555 !important;
+    .el-popover__title {
+      font-size: 13px;
+      font-weight: bold;
+      color: #555;
+    }
+    &[data-popper-placement='top'] {
+      .el-popper__arrow::before {
+        border-bottom-color: #333 !important;
+        border-right-color: #333 !important;
+        border-width: 2px !important;
+      }
+    }
+    &[data-popper-placement='bottom'] {
+      .el-popper__arrow::before {
+        border-top-color: #333 !important;
+        border-left-color: #333 !important;
+        border-width: 2px !important;
+      }
+    }
+  }
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus,
