--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -8,9 +8,10 @@ body.theme-light {
   --primary-color-match-1-transition: #e5d14e;
   --primary-color-match-1-dark: #655c23;
   --primary-color-match-1-light: #fffad6;
-  --primary-color-match-2: #FC777D;
+  --primary-color-match-2: #fc6a70;
   --primary-color-match-2-transition: #cb5053;
   --primary-color-match-2-light: #ffd2d4;
+  --primary-color-match-2-light1: #ff898e;
   --primary-color-match-3: #ff00ff;
   --primary-color-3: #555;
   --primary-color-5: #777;
