发布窗口样式不正确

--- a/node-page/src/assets/style/app.scss
+++ b/node-page/src/assets/style/app.scss
@@ -127,6 +127,9 @@ html {
     .el-dialog__body {
       padding: var(--el-dialog-padding-primary);
     }
+    .el-dialog__footer {
+      padding: var(--el-dialog-padding-primary);
+    }
   }
   // popover提示
   .global-popover {
