文本对比工具完成

--- a/node-page/src/assets/style/theme-light.scss
+++ b/node-page/src/assets/style/theme-light.scss
@@ -41,4 +41,7 @@ body.theme-light {
   --color-value: #333;
   --color-service-name: #005980;
   --color-service-name-hover: #1283ba;
+  // 工具
+  --tool-toolbar-background-color: #f5f7fa;
+  --tool-toolbar-border-color: #dcdfe6;
 }
